# yast-fcoe-client

./: .gitignore  .travis.yml  MAINTAINER  README.md  RPMNAME  _cvsignore  yast2-fcoe-client.spec.in
.github/workflows/: ci.yml
agents/: Makefile.am  fcoe_cfg-ethx.scr  fcoe_config.scr
doc/: Makefile.am
doc/autodocs/: Makefile.am
package/: yast2-fcoe-client.changes  yast2-fcoe-client.spec
src/: FcoeClient.ycp  FcoeClient2.pm  FcoeClient3.py  Makefile.am  complex.ycp  dialogs.ycp  fcoe-client.desktop  fcoe-client_auto.ycp  fcoe-client_finish.ycp  fcoe-client_proposal.ycp  helps.ycp  inst_fcoe-client.ycp  wizards.ycp
src/autoyast-rnc/: fcoe-client.rnc
src/clients/: fcoe-client.rb  fcoe-client.ycp  fcoe-client_auto.rb  fcoe-client_finish.rb  fcoe-client_finish.ycp  fcoe-client_proposal.rb  inst_fcoe-client.rb  inst_fcoe-client.ycp
src/desktop/: fcoe-client.desktop  org.openSUSE.YaST.FCoEClient.desktop  org.opensuse.yast.FCoEClient.desktop
src/include/fcoe-client/: complex.rb  complex.ycp  dialogs.rb  dialogs.ycp  helps.rb  helps.ycp  wizards.rb
src/lib/y2fcoe_client/: actions.rb  inst_client.rb
src/lib/y2fcoe_client/actions/: base.rb  create.rb  remove.rb
src/modules/: FcoeClient.rb  FcoeClient.ycp
src/scrconf/: Makefile.am  fcoe_cfg-ethx.scr
test/: DetectNetworkCards_spec.rb  FcoeClient_spec1.rb  FcoeClient_spec2.rb  GetVlanInterfaces_spec.rb  Makefile.am  fcoe_client_complex_include_test.rb  fcoe_client_write_spec.rb  test_helper.rb
testsuite/tests/: FcoeClient.out  FcoeClient.rb  FcoeClient.ycp
